Add profile photo to member page

--- a/members/kevin.html
+++ b/members/kevin.html
@@ -48,14 +48,27 @@
 </header>
 
 <section>
-  <div class="card">
-    <h2>About Me</h2>
-    <p>
-      Hi! My name is Kevin Peoples and I am a Computer Science student at UC San Diego.
-      I am currently taking CSE 135 to learn how modern web systems are deployed,
-      secured, and maintained at scale.
-    </p>
-  </div>
+<div class="card">
+  <h2>About Me</h2>
+
+  <img
+    src="kevin.jpg"
+    alt="Photo of Kevin Peoples"
+    style="
+      width: 160px;
+      height: auto;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+    "
+  >
+
+  <p>
+    Hi! My name is Kevin Peoples and I am a Computer Science student at UC San Diego.
+    I am currently taking CSE 135 to learn how modern web systems are deployed,
+    secured, and maintained at scale.
+  </p>
+</div>
+
 
   <div class="card">
     <h2>Technical Interests</h2>
