Deployment demo update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2>Analytics App</h2>
       <div class="card">TBD</div>
 
-      <p>Last updated: <span id="ts"></span></p>
+      <p>Deployment Demo: <span id="ts"></span></p>
     </main>
 
     <aside class="card">
